--- a/Assignment_1_200070033/portal.html
+++ b/Assignment_1_200070033/portal.html
@@ -8,7 +8,8 @@
 <link rel = "icon" type = "image/png" href = "images/favicon.png">
 <style>
 img {
-    width: 100%;
+    width: 1500px;
+    height: 300px; 	
 }
 
 * {
@@ -76,9 +77,11 @@ img {
   
   <div class="main">  
      
+    <div class="img">
     <div><br>
-        <img src="/images/testimonial div.png">
+        <img src="/images/testimonial div.png" alt="testimony">
     </div><br>
+    </div>
            
   <p>To subscribe to the newsletter:</p>
 
